<resources>
    <string name="app_name">InTime</string>
    <string name="Administrar">Administrar</string>
    <string name="Hora">Hora</string>
    <string name="Min">Min</string>
    <string name="numPersDuda">Número de Personas</string>
    <string name="Anadir">Añadir</string>
    <string name="horaioTabla">horario</string>
    <string name="asistentesTabla">Asistentes</string>
    <string name="maximoTabla">Máximo</string>
    <string name="gimnasio">Gimnasio</string>
    <string name="editar">Editar</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="codigoGym">Código Gimnasio</string>
    <string name="guardar">Guardar</string>
    <string name="contacto">Contacto</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="apellidos">Apellidos</string>
    <string name="contrasena">Contraseña</string>
    <string name="repContrasena">Repite la Contraseña</string>
    <string name="aceptar">Acepto los</string>
    <string name="terminosYCondiciones">Términos y Condiciones</string>
    <string name="nombreDeUsuario">Nombre de Usuario</string>
    <string name="comprobar">Comprobar</string>
    <string name="olvidarPregunta">¿Olvidaste la contraseña?</string>
    <string name="sinCuenta">No tienes cuenta.</string>
    <string name="creala">"Créala "</string>
    <string name="menu">Menú</string>
    <string name="chat">Chat</string>
    <string name="usuarios">Usuarios</string>
    <string name="perfil">Perfil</string>
    <string name="salir">Salir</string>
    <string name="reservar">Reservar</string>
    <string name="miCuerpo">Mi Cuerpo</string>
    <string name="kilogramos">Kilogramos</string>
    <string name="altura">Altura</string>
    <string name="imc">IMC</string>
    <string name="calcular">Calcular</string>
    <string name="anadirUsuarios">Añadir Usuarios</string>
</resources>