<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#000000">

    <ImageView
        android:id="@+id/intimelogoLogin"
        android:layout_gravity="center_horizontal"
        android:layout_width="322dp"
        android:layout_height="96dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/intimelogo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/urbanistbold"/>

    <!-- GridLayout for buttons -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_marginTop="31dp"
        android:layout_gravity="center">

        <!-- Buttons in the first column -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Administrar"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginRight="14.5dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="#4c4c4c"
            android:fontFamily="@font/urbanistbold"
            android:onClick="AdministrarClick"
            android:paddingTop="20dp"
            android:text="@string/Administrar"
            android:textColor="@color/white"
            android:textSize="19dp"
            app:cornerRadius="10dp"
            app:icon="@drawable/build"
            app:iconGravity="top"
            app:iconSize="70dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Chat"
            android:layout_marginLeft="14.5dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="#4c4c4c"
            android:fontFamily="@font/urbanistbold"
            app:cornerRadius="10dp"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:icon="@drawable/chat"
            app:iconSize="70dp"
            app:iconGravity="top"
            android:paddingTop="20dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Usuarios"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginRight="14.5dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="#4c4c4c"
            android:fontFamily="@font/urbanistbold"
            android:onClick="UsuariosClick"
            android:paddingTop="20dp"
            android:text="@string/usuarios"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:cornerRadius="10dp"
            app:icon="@drawable/users"
            app:iconGravity="top"
            app:iconSize="70dp" />

        <!-- Buttons in the second column -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Gimnasio"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="14.5dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="#4c4c4c"
            android:fontFamily="@font/urbanistbold"
            android:onClick="GymClick"
            android:paddingTop="20dp"
            android:text="@string/gimnasio"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:cornerRadius="10dp"
            app:icon="@drawable/gimnasio"
            app:iconGravity="top"
            app:iconSize="70dp" />

        <com.google.android.material.button.MaterialButton
        android:id="@+id/Perfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginRight="14.5dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#4c4c4c"
        android:fontFamily="@font/urbanistbold"
        android:onClick="PerfilClick"
        android:paddingTop="20dp"
        android:text="@string/perfil"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:cornerRadius="10dp"
        app:icon="@drawable/config"
        app:iconGravity="top"
        app:iconSize="70dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Salir"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="14.5dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="#4c4c4c"
            android:fontFamily="@font/urbanistbold"
            android:onClick="SalirClick"
            android:paddingTop="20dp"
            android:text="@string/salir"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:cornerRadius="10dp"
            app:icon="@drawable/reserva"
            app:iconGravity="top"
            app:iconSize="70dp" />

    </GridLayout>
</LinearLayout>
