<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/intimelogo"
        android:layout_width="300dp"
        android:layout_height="167dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:scaleType="centerCrop"
        android:src="@drawable/intimelogo" />

    <ScrollView
        android:layout_below="@+id/intimelogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#000000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crearCuenta"
                android:textSize="40dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="57dp"
                android:layout_marginRight="58dp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/urbanistbold"/>

            <EditText
                android:layout_gravity="center_horizontal"
                android:id="@+id/editTextNombre"
                android:layout_width="266dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/nombre"
                android:fontFamily="@font/montserratlight"
                android:textSize="20dp"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#000"
                android:background="@drawable/custom_edittext_background"
                />
            <EditText
                android:layout_gravity="center_horizontal"
                android:id="@+id/editTextApellidos"
                android:textSize="20dp"
                android:layout_width="266dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/apellidos"
                android:fontFamily="@font/montserratlight"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#000"
                android:background="@drawable/custom_edittext_background"
                />
            <EditText
                android:layout_gravity="center_horizontal"
                android:id="@+id/editTextCorreoE"
                android:layout_width="266dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/correoElectronico"
                android:fontFamily="@font/montserratlight"
                android:textSize="20dp"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#000"
                android:background="@drawable/custom_edittext_background"
                />
            <EditText
                android:layout_gravity="center_horizontal"
                android:id="@+id/editTextContrasena"
                android:layout_width="266dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/contrasena"
                android:fontFamily="@font/montserratlight"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#000"
                android:background="@drawable/custom_edittext_background"
                />
            <EditText
                android:layout_gravity="center_horizontal"
                android:id="@+id/editTextRepContrasena"
                android:layout_width="266dp"
                android:layout_height="39dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/repContrasena"
                android:fontFamily="@font/montserratlight"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#000"
                android:background="@drawable/custom_edittext_background"
                />


            <EditText
                android:id="@+id/editTextCodGym"
                android:layout_width="266dp"
                android:layout_height="39dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/custom_edittext_background"
                android:fontFamily="@font/montserratlight"
                android:hint="@string/codigoGym"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="#000"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:outlineAmbientShadowColor="@color/white"
                    android:outlineSpotShadowColor="@color/white"
                    app:useMaterialThemeColors="false" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aceptar"
                    android:fontFamily="@font/urbanistbold"
                    android:textColor="@color/white"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/textViewTyC"
                    android:fontFamily="@font/urbanistbold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terminosYCondiciones"
                    android:textColor="#59CE73"
                    android:textSize="13dp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCrearCuenta"
                android:layout_width="243dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#59CE73"
                android:fontFamily="@font/urbanistbold"
                android:onClick="CrearCuentaClick"
                android:text="@string/crearCuenta"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"
                />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>
