<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000000">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="44dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="24dp"
            android:clickable="false"
            android:clipToOutline="false"
            android:onClick="VolverAlMenu"
            android:src="@drawable/arrowleft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="23dp"
            android:layout_toEndOf="@id/btnBack"
            android:layout_toRightOf="@id/btnBack"
            android:fontFamily="@font/urbanistbold"
            android:text="@string/perfil"
            android:textColor="#FFFFFF"
            android:textSize="32dp"
            android:textStyle="bold" />
    </LinearLayout>




    <ImageView
        android:layout_marginTop="17dp"
        android:id="@+id/profileImageView"
        android:layout_gravity="center_horizontal"
        android:layout_width="144dp"
        android:layout_height="144dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="16dp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="47dp"
        android:fontFamily="@font/urbanistbold"
        android:layout_marginTop="10dp"
        />

    <!-- Campo de texto para el nombre -->
    <EditText

        android:id="@+id/tbusunombre"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:layout_marginLeft="47dp"
        android:background="@drawable/custom_edittext_background"
        android:fontFamily="@font/montserratlight"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#000"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"
        android:textSize="16dp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="47dp"
        android:fontFamily="@font/urbanistbold"
        android:layout_marginTop="10dp"
        />

    <!-- Campo de texto para el nombre -->
    <EditText
        android:id="@+id/etusuApellidos"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:fontFamily="@font/montserratlight"
        android:textSize="20dp"
        android:inputType="text"
        android:layout_marginLeft="47dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#000"
        android:background="@drawable/custom_edittext_background"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigoGym"
        android:textSize="16dp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="47dp"
        android:fontFamily="@font/urbanistbold"
        android:layout_marginTop="10dp"
        />

    <!-- Campo de texto para el nombre -->
    <EditText
        android:id="@+id/etusuCodGym"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:layout_marginLeft="47dp"
        android:background="@drawable/custom_edittextnc_background"
        android:fontFamily="@font/montserratlight"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#000"
        android:textSize="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correoElectronico"
        android:textSize="16dp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="47dp"
        android:fontFamily="@font/urbanistbold"
        android:layout_marginTop="10dp"
        />

    <!-- Campo de texto para el nombre -->
    <EditText
        android:id="@+id/tbusuelectronico"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:fontFamily="@font/montserratlight"
        android:textSize="20dp"
        android:inputType="text"
        android:layout_marginLeft="47dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#000"
        android:background="@drawable/custom_edittext_background"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasena"
        android:textSize="16dp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="47dp"
        android:fontFamily="@font/urbanistbold"
        android:layout_marginTop="10dp"
        />

    <!-- Campo de texto para el nombre -->
    <EditText
        android:id="@+id/tbusupass"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:fontFamily="@font/montserratlight"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:layout_marginLeft="47dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#000"
        android:background="@drawable/custom_edittext_background"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnguardarPerfil"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="46dp"
        android:backgroundTint="#59CE73"
        android:fontFamily="@font/urbanistbold"
        android:gravity="center"
        android:onClick="actualizarDatos"
        android:text="@string/guardar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22dp" />

</LinearLayout>